# 4231project

./: README.md
install/: local_setup.sh  setup.sh
install/canvas/share/canvas/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/canvas_detector/share/canvas_detector/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/custom_messages/share/custom_messages/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/messages/share/messages/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/moveit/share/moveit/: package.sh
install/my_package/share/my_package/: package.sh  package.xml
install/openCV_example/share/openCV_example/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/opencv_example/lib/opencv_example/: aruco_marker_detect
log/: latest_build
src/canvas/: CMakeLists.txt
src/canvas/msg/: Aruco.msg
src/canvas_detector/: CMakeLists.txt
src/canvas_detector/msg/: aruco_message.msg
src/canvas_detector/src/: aruco_marker_detect.py
src/custom_messages/: CMakeLists.txt  package.xml
src/messages/: CMakeLists.txt
src/moveit/: CMakeLists.txt
src/my_package/: setup.py
src/opencv_example/: package.xml  setup.cfg  setup.py
src/opencv_example/opencv_example/: aruco_marker_detect.py
src/ros2_v4l2_camera-rolling/src/: parameters.cpp
src/transforms/: CMakeLists.txt  package.xml
src/transforms/src/: paper.cpp  path.cpp
(+128 files in other folders)
